Fix missing color from last commit

--- a/src/ts/components/Pages/WikiPage/WikiPage.less
+++ b/src/ts/components/Pages/WikiPage/WikiPage.less
@@ -586,7 +586,7 @@
 .wiki-table-of-contents,
 .wiki-expandable {
     display: table;
-    background-color: @element-background-color;
+    background-color: @expandable-background-color;
 
     margin-bottom: @medium-gap;
 
